[metadata]
name = python-atac-utils
version = 0.0.1
author = Jeffrey Niu
author_email = yinian@cs.ubc.ca
description = Helper functions for handling scATAC-seq data in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/niujeffrey/python-atac-utils/
project_urls =
    Bug Tracker = https://github.com/niujeffrey/python-atac-utils/issues
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD Licenses
    
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.16.2
    h5py>=2.9.0
    pandas>=0.25
    tqdm>=4.31.1
    anndata>=0.7
    scanpy>=1.4.6
    scipy<1.14.0,>=1.0.0
    pandas>=1.5.0

[options.packages.find]
where = src